# BanoiPatch

./: .gitignore  CMakeLists.txt  LICENSE  README.md  xinput1_3.def
src/: Config.cpp  Config.h  D3DHooks.cpp  D3DHooks.h  TypeDefs.h  Utils.cpp  Utils.h  dllmain.cpp
